# cryptanalysislib

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  bench.py  build.sh  compile_commands.json  config.h  debug.json  opt.py  python-shell.nix  setup.py  shell.nix
bench/: CMakeLists.txt  bench_config.h
bench/algorithm/: CMakeLists.txt  accumulate.cpp  all_of.cpp  argmax.cpp  argmin.cpp  copy.cpp  count.cpp  equal.cpp  exclusive_scan.cpp  fill.cpp  find.cpp  for_each.cpp  gcd.cpp  histogram.cpp  prefixsum.cpp
bench/combinations/: CMakeLists.txt  binary.cpp  ternary.cpp
bench/container/: CMakeLists.txt  README.md  ctrie.cpp  get_bits.cpp  hashmap.cpp  hashmap2.cpp  imap.cpp  kAryPackedContainer.cpp  linkedlist.cpp
bench/enumeration/: CMakeLists.txt  chase.cpp  chaseg.cpp
bench/label/: CMakeLists.txt  add.cpp  add_level.cpp  equal_level.cpp  sub.cpp  sub_level.cpp
bench/labeltype/: CMakeLists.txt  add.cpp  sub.cpp
bench/list/: CMakeLists.txt  binarysearch.cpp  search.cpp  sort.cpp
bench/loop_fusion/: CMakeLists.txt  union.cpp
bench/math/: CMakeLists.txt  mod.cpp
bench/matrix/: CMakeLists.txt  fq_gaus.cpp  fq_permute.cpp  gaus.cpp
bench/mem/: CMakeLists.txt  malloc_free.cpp  memcpy.cpp
bench/nn/: CMakeLists.txt  avx2.cpp  bruteforce.cpp  common.h  n128_avx2.cpp  opt.cpp  popcount.cpp  simd_256.cpp  sort_nn_on32.cpp  sort_nn_on64.cpp
bench/random/: CMakeLists.txt  bounded.cpp  normal.cpp
bench/search/: CMakeLists.txt  binarysearch.cpp  internal_parallel_bucket_search.cpp  search.cpp
bench/sort/: CMakeLists.txt  binarycontainer_single_limb.cpp  counting_sort.cpp  gbench_sort.cpp  internal_parallel_bucket_sort.cpp  sort.cpp  sort2.cpp  sortingnetwork.cpp
bench/stl/: CMakeLists.txt  stl.cpp
bench/subsetsum/: CMakeLists.txt  README.md  params.h  rho.cpp  tree.cpp
bench/thread/: CMakeLists.txt  join.cpp  sum_tree.cpp
bench/tree/: CMakeLists.txt  join2lists.cpp  join2lists2.cpp
bench/value/: CMakeLists.txt  absolute.cpp  add.cpp  move_operator.cpp
cryptanalysislib/: \  bench.py  opt.py  opt_subsetsum.py  parse_google_benchmark.py
src/: CMakeLists.txt  align.h  atomic_primitives.h  binary.h  combinations.h  container.h  cpucycles.h  custom_matrix.h  dispatch.h  element.h  futex.h  glue_fplll.h  glue_m4ri.h  helper.cuh  helper.h  kAry_type.h  label.h  list.h  macros.h  matrix.h  memset.h  metric.h  pcs.h  random.h  search.h  size.h  sort.h  traits.h  tree.h  triple.h  uin128t.h  value.h  warp_scan.cuh
src/avx2/: avx2.h
tests/: CMakeLists.txt  test.h  test_ConstNonBlockingLinkedList.cpp  test_build_tree.cpp  test_combinations.cpp  test_custommatrix.cpp  test_dispatch.cpp  test_element.cpp  test_gaus.cpp  test_google_benchmark_parser.py  test_kAryPackedContainer.cpp  test_kArytype.cpp  test_kArytype.h  test_label.cpp  test_list.cpp  test_matrix_mul.cpp  test_mem.cpp  test_pcs.cpp  test_reflection.cpp  test_search.cpp  test_sort.cpp  test_stl.cpp  test_subsetsum.cpp  test_tree.cpp  test_treecorrectdistribution.cpp  test_triple.cpp  test_uint128t.cpp  test_value.cpp  warp_scan.cu
tests/algorithm/: CMakeLists.txt  accumulate.cpp  all_of.cpp  argmax.cpp  argmin.cpp  copy.cpp  count.cpp  deflate.cpp  equal.cpp  exclusive_scan.cpp  fill.cpp  find.cpp  for_each.cpp  histogram.cpp  max.cpp  min.cpp  pcs.cpp  prefixsum.cpp  reduce.cpp  regex.cpp  test_pcs.cpp  transform.cpp  transpose.cpp
tests/algorithm/bits/: CMakeLists.txt
tests/algorithm/bits/popcount/: avx2.cpp  simple.cpp
tests/algorithm/subsetsum/: CMakeLists.txt  dissection.cpp  generic.cpp  join2lists.cpp  join4lists.cpp  join8lists.cpp  join_for.cpp  join_stream.cpp  parameters.cpp  subsetsum.h  tmto.cpp
tests/alloc/: CMakeLists.txt  cache.cpp  dev.cpp  gc.cpp
tests/atomic/: CMakeLists.txt  atomic.cpp
tests/binary/: CMakeLists.txt  binary.h  bkw.cpp  build_tree.cpp  container.cpp  container_avx.cpp  container_cmp.cpp  container_label.cpp  element.cpp  extended_tree.cpp  label.cpp  list.cpp  sort.cpp  tree.cpp  value.cpp
tests/binary/128/: include.h
tests/binary/256/: 256.cpp  256_align.cpp  include.h
tests/binary/32/: 32.cpp  include.h
tests/binary/64/: include.h
tests/combination/: CMakeLists.txt  biject.cpp  chase.cpp  enumerate.cpp  reverse.cpp
tests/compression/: CMakeLists.txt  constexpr_huffman.cpp  leb128.cpp  lz77.cpp  lzmat.cpp  smaz2.cpp
tests/container/: CMakeLists.txt  aa_tree.cpp  avl_tree.cpp  bk_tree.cpp  btree_set.cpp  constNonBlockingLinkedList.cpp  ctrie.cpp  fq_packedvector.cpp  fq_vector.cpp  imap.cpp  lock_free_queue.cpp  packed_f3.cpp  queue.cpp  rb_tree.cpp  simple.cpp  test_fqpackedvector.h  test_fqvector.h  triple.cpp
tests/container/hashmap/: CMakeLists.txt  hopscotch.cpp  simd.cpp  simple.cpp  simple2.cpp  simple_compressed.cpp
tests/crypto/: CMakeLists.txt  md5.cpp  sha1.cpp
tests/cuda/: CMakeLists.txt  cuda.cpp  gaus.cu  sort.cu
tests/hash/: CMakeLists.txt  adler32.cpp  cityhash.cpp  crc32.cpp  simple.cpp
tests/list/: CMakeLists.txt  binary.cpp  common.cpp  list.cpp  list_hashmap_api.cpp  parallel.cpp  parallel_full.cpp  parallel_index.cpp  test_list.h
tests/list/enumeration/: CMakeLists.txt  biject.cpp  binary.cpp  chase.cpp  fq.cpp  ternary.cpp
tests/loop_fusion/: CMakeLists.txt  constexpr.cpp  runtime.cpp
tests/math/: CMakeLists.txt  math.cpp
tests/matrix/: CMakeLists.txt  binary.cpp  custom_m4ri.cpp  fq.cpp  simple.cpp
tests/memory/: CMakeLists.txt  memset.cpp  simple.cpp  test.h
tests/nn/: CMakeLists.txt  avx.cpp  bruteforce.cpp  cuda.cu  parameters.cpp  simd.cpp  simd_bruteforce.cpp  simple.cpp
tests/popcount/: CMakeLists.txt  avx2.cpp  simple.cpp
tests/search/: CMakeLists.txt  binary.cpp  common.h  interpolation.cpp  linear.cpp
tests/simd/: CMakeLists.txt  algorithms.cpp  avx.cpp  generic.cpp  simd.cpp  simd.h  simd512.cpp  test_simd.h
tests/sort/: CMakeLists.txt  parallel.cpp  sorting_algorithms.cpp  sorting_network.cpp
tests/thread/: CMakeLists.txt  heartbead_scheduler.cpp  inter_thread_latency.cpp  pthread.cpp  scheduler.cpp  scheduler_performance_manager.cpp  simple.cpp  thread.cpp
(+426 files in other folders)
