add_subdirectory(container)
add_subdirectory(enumeration)
add_subdirectory(label)
add_subdirectory(labeltype)
add_subdirectory(value)
add_subdirectory(list)
add_subdirectory(mem)
add_subdirectory(sort)
add_subdirectory(search)
add_subdirectory(stl)
#TODO add_subdirectory(matrix)
add_subdirectory(nn)
