add_subdirectory(algorithm)
add_subdirectory(container)
add_subdirectory(enumeration)
add_subdirectory(label)
add_subdirectory(labeltype)
add_subdirectory(list)
add_subdirectory(loop_fusion)
add_subdirectory(math)
add_subdirectory(matrix)
add_subdirectory(mem)
add_subdirectory(nn)
add_subdirectory(random)
add_subdirectory(search)
add_subdirectory(sort)
add_subdirectory(stl)
add_subdirectory(thread)
add_subdirectory(tree)
add_subdirectory(value)
