#TESTS Flags
set(COMPILE_TEST_FLAGS -g -pthread)

add_subdirectory(algorithm)
add_subdirectory(alloc)
add_subdirectory(atomic)
add_subdirectory(binary)
add_subdirectory(combination)
add_subdirectory(compression)
add_subdirectory(container)
add_subdirectory(crypto)
if(USE_CUDA)
add_subdirectory(cuda)
endif()
add_subdirectory(hash)
add_subdirectory(list)
add_subdirectory(loop_fusion)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(matrix)
add_subdirectory(nn)
add_subdirectory(popcount)
add_subdirectory(search)
add_subdirectory(simd)
add_subdirectory(sort)
add_subdirectory(thread)

file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(${file} ${testfile}
            ../src/atomic/queue.h
            ../src/thread/pthread.h
            ../src/algorithm/for_each.h)
    target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(${file} ${LINK_TEST_FLAGS})
    add_test(AllTests ${file})
endforeach(testfile ${TEST_SOURCES})
