file(GLOB BENCH_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(benchfile ${BENCH_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${benchfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(bench_b63_mem_${file} ${benchfile})
    target_compile_options(bench_b63_mem_${file} PUBLIC ${COMPILE_BENCH_FLAGS})
    target_link_libraries(bench_b63_mem_${file} ${MALLOC_LIBRARY})
    add_dependencies(bench_b63_mem_${file} m4ri_project fplll_project)
endforeach( benchfile ${BENCH_SOURCES})
