file(GLOB BENCH_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(benchfile ${BENCH_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${benchfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(bench_stl_${file} ${benchfile} )
    target_link_libraries(bench_stl_${file} ${MALLOC_LIBRARY} ${LINK_BENCH_FLAGS})
endforeach( benchfile ${BENCH_SOURCES})
