file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(test_binary_${file} ${testfile})
    target_compile_options(test_binary_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(test_binary_${file} ${LINK_TEST_FLAGS})
    # add_dependencies(test_binary_${file} m4ri_project fplll_project)
endforeach(testfile ${TEST_SOURCES})

add_executable(test_binary_32 32/32.cpp)
target_compile_options(test_binary_32 PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_32 ${LINK_TEST_FLAGS})
add_dependencies(test_binary_32 m4ri_project fplll_project)

add_executable(test_binary_64 64/64.cpp)
target_compile_options(test_binary_64 PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_64 ${LINK_TEST_FLAGS})
add_dependencies(test_binary_64 m4ri_project fplll_project)

add_executable(test_binary_128 128/128.cpp)
target_compile_options(test_binary_128 PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_128 ${LINK_TEST_FLAGS})
add_dependencies(test_binary_128 m4ri_project fplll_project)

add_executable(test_binary_256 256/256.cpp)
target_compile_options(test_binary_256 PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_256 ${LINK_TEST_FLAGS})
add_dependencies(test_binary_256 m4ri_project fplll_project)

add_executable(test_binary_32_align 32/32_align.cpp)
target_compile_options(test_binary_32_align PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_32_align ${LINK_TEST_FLAGS})
add_dependencies(test_binary_32_align m4ri_project fplll_project)

add_executable(test_binary_64_align 64/64_align.cpp)
target_compile_options(test_binary_64_align PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_64_align ${LINK_TEST_FLAGS})
add_dependencies(test_binary_64_align m4ri_project fplll_project)

add_executable(test_binary_128_align 128/128_align.cpp)
target_compile_options(test_binary_128_align PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_128_align ${LINK_TEST_FLAGS})
add_dependencies(test_binary_128_align m4ri_project fplll_project)

add_executable(test_binary_256_align 256/256_align.cpp)
target_compile_options(test_binary_256_align PUBLIC ${COMPILE_TEST_FLAGS})
target_link_libraries(test_binary_256_align ${LINK_TEST_FLAGS})
add_dependencies(test_binary_256_align m4ri_project fplll_project)
