file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(popcount_${file} ${testfile})
    target_compile_options(popcount_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(popcount_${file} ${LINK_TEST_FLAGS})
    #add_dependencies(popcount_${file} m4ri_project fplll_project)
endforeach(testfile ${TEST_SOURCES})
