file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(test_crypto_${file} ${testfile})
    target_compile_options(test_crypto_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    target_link_libraries(test_crypto_${file} ${LINK_TEST_FLAGS})
	add_test(AllTests test_crypto_${file})
endforeach(testfile ${TEST_SOURCES})
